--- a/stylesheets/_style.scss
+++ b/stylesheets/_style.scss
@@ -30,9 +30,9 @@ h2 {
 }
 
 /* Fix bug with grunt-webfont plugin */
-// [class^="icon-"]:before, [class*=" icon-"]:before {
-// 	vertical-align: baseline !important;
-// }
+[class^="icon-"]:before, [class*=" icon-"]:before {
+ 	vertical-align: inherit !important;
+}
 
 .columns-button {
 	
